--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,68 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: "Courier New", Courier, monospace;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background: purple;
+}
+main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+.title {
+  margin: 1rem 0.5rem;
+  text-align: center;
+}
+.look {
+  background-color: whitesmoke;
+  border-radius: 0.25;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  border-radius: 0.25rem;
+  width: 90vw;
+}
+.item {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  width: 90%;
+  margin: 1rem auto 1rem auto;
+}
+.question {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 1rem;
+}
+.item p {
+  padding: 0.25rem;
+  margin: 0.25rem;
+}
+.btn {
+  background: transparent;
+  border-color: transparent;
+  width: 2rem;
+  height: 2rem;
+  background: rgb(187, 199, 199);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  color: red;
+  cursor: pointer;
+  margin-left: 1rem;
+  align-self: center;
+}
+@media (max-width: 900px) {
+  .question {
+    font-size: small;
+  }
+}
+@media (max-width: 750px) {
+  .question h2 {
+    width: 80%;
+  }
 }
